--- a/index.html
+++ b/index.html
@@ -7,14 +7,34 @@
     <script src="https://unpkg.com/vue@next"></script>
     <title>Learning vue</title>
     <style>
-        .box {
+        body {
             padding: 100px 0;
-            width: 400px;
+            max-width: 960px;
             text-align: center;
-            background: #ddd;
-            margin: 20px;
-            display: inline-block;
+            background: #eee;
+            margin: 20px auto;
+           
         }
+        p, h3, ul {
+            margin: 0;
+            padding: 0;
+        }
+        li {
+            list-style-type: none;
+            background: #fff;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+         }
+         li.fav {
+            background: #ff9ed2;
+            color: white;
+
+
+         }
     </style>
 </head>
 <body>
@@ -22,23 +42,25 @@
 
   <div id="app">
     <!-- <h2>{{start}}</h2> -->
+    <!-- <a :href="url">best website ever</a> -->
+
    <div v-if="showBooks">
-    <p>{{title}} - {{author}} - {{age}}</p>
+    <ul>
+        <li v-for='book in filteredBooks' :class='{fav: book.isFav}' @click='toggleFav(book)'>
+            <img :src="book.img" :alt="book.title">
+            <h3>{{book.title}}</h3>
+            <p>{{book.author}}</p>
+
+        </li>
+    </ul>
    </div>
 
-   <!-- <button v-on:click='age++' >increase age</button>
-   <button v-on:click='age--' >decrease age</button>
-   <div @click="changeTitle('me and you')">change it</div> -->
+ 
   <button @click="toggleShowBooks">
     <span v-if='showBooks'>hide books</span>
     <span v-else='show books'> show books</span>
     </button>
-   <!-- <br>
-<div class="box" @mouseover='handleEvent($event, 5)'> mouseover (enter)</div>
-<div class="box" @mouseleave='handleEvent'> mouseleave</div>
-<div class="box" @dblclick='handleEvent' > double click</div>
-<div class="box" @mousemove='handleMousemove'>position: {{x}} - {{y}}</div> -->
-
+  
  </div>
   <script src="app.js"></script>
 </body>
